Добавил поле марки авто

--- a/custom/custom28_10_2019_18_12/css/components/_main.scss
+++ b/custom/custom28_10_2019_18_12/css/components/_main.scss
@@ -370,14 +370,14 @@ main.right-side {
         margin-left: 5px;
     }
 
-    &.form-group28 {
+    &.form-group28, &.form-group30 {
         width: calc(50% - 10px);
         display: inline-block;
         vertical-align: top;
         margin-left: 5px;
     }
 
-    &.form-group31 {
+    &.form-group31, &.form-group33 {
         width: calc(50% - 10px);
         display: inline-block;
         vertical-align: top;
