--- a/custom/custom28_10_2019_18_12/css/components/_main.scss
+++ b/custom/custom28_10_2019_18_12/css/components/_main.scss
@@ -575,3 +575,54 @@ main.right-side {
 .shop-item-right svg:hover {
     color: #444;
 }
+
+.js_paginator_more_button {
+    background-color: #4673ff;
+    border: none;
+    color: #fff;
+    padding: 5px 10px;
+    margin: 10px 0;
+    border-radius: 10px !important;
+}
+
+.js_paginator_more_button:hover, .block.paginator a:hover {
+    background-color: #222;
+}
+
+.block.paginator {
+    margin-top: 20px;
+}
+
+.block.paginator a {
+    display: inline-block;
+    background-color: #4673ff;
+    padding: 5px 10px;
+    margin-right: 5px;
+    font-size: 15px;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.block.paginator span.active {
+    display: inline-block;
+    background-color: #ccc;
+    padding: 5px 10px;
+    margin-right: 5px;
+    font-size: 15px;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.js_shop_list > .block_header > a {
+    font-size: 16px;
+    color: #000;
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+    transition: all .3s;
+}
+
+.js_shop_list > .block_header > a:hover {
+    color: #0073ff;
+}
